hier_sources = ['BaseGridGeometry.C',
	'BlockId.C',
	'BoxContainer.C',
	'CoarseFineBoundary.C',
	'LocalId.C',
	'PatchBoundaries.C',
	'PatchHierarchy.C',
	'HierarchyNeighbors.C',
	'FlattenedHierarchy.C',
	'PatchLevel.C',
	'PatchLevelFactory.C',
	'PeriodicId.C',
	'SingularityFinder.C',
	'PatchDataRestartManager.C',
	'VariableDatabase.C',
	'Variable.C',
	'PatchDescriptor.C',
	'PatchFactory.C',
	'PatchDataFactory.C',
	'Patch.C',
	'PatchGeometry.C',
	'PatchData.C',
	'BoxLevelConnectorUtils.C',
	'BoxContainerUtils.C',
	'BaseConnectorAlgorithm.C',
	'OverlapConnectorAlgorithm.C',
	'MappingConnectorAlgorithm.C',
	'Connector.C',
	'MappingConnector.C',
	'ConnectorStatistics.C',
	'BoxLevelHandle.C',
	'PeriodicShiftCatalog.C',
	'RealBoxConstIterator.C',
	'BoxContainerSingleBlockIterator.C',
	'BoxContainerSingleOwnerIterator.C',
	'BoxTree.C',
	'MultiblockBoxTree.C',
	'AssumedPartitionBox.C',
	'AssumedPartition.C',
	'BoxLevel.C',
	'BoxLevelStatistics.C',
	'PersistentOverlapConnectors.C',
	'BoxNeighborhoodCollection.C',
	'BoxOverlap.C',
	'BoxGeometry.C',
	'BoundaryBoxUtils.C',
	'BoxUtilities.C',
	'BoundaryBox.C',
	'BoundaryLookupTable.C',
	'Box.C',
	'Index.C',
	'IntVector.C',
	'GlobalId.C',
	'BoxId.C',
	'ProcessorMapping.C',
	'ComponentSelector.C',
	'VariableContext.C',
	'TransferOperatorRegistry.C',
	'CoarsenOperator.C',
	'RefineOperator.C',
	'TimeInterpolateOperator.C',
	'Transformation.C',
	'UncoveredBoxIterator.C']



hier_headers = ['AssumedPartition.h',
 'AssumedPartitionBox.h',
 'BaseConnectorAlgorithm.h',
 'BaseGridGeometry.h',
 'BlockId.h',
 'BoundaryBox.h',
 'BoundaryBoxUtils.h',
 'BoundaryLookupTable.h',
 'Box.h',
 'BoxContainer.h',
 'BoxContainerSingleBlockIterator.h',
 'BoxContainerSingleOwnerIterator.h',
 'BoxContainerUtils.h',
 'BoxGeometry.h',
 'BoxId.h',
 'BoxLevel.h',
 'BoxLevelConnectorUtils.h',
 'BoxLevelHandle.h',
 'BoxLevelStatistics.h',
 'BoxNeighborhoodCollection.h',
 'BoxOverlap.h',
 'BoxTree.h',
 'BoxUtilities.h',
 'CoarseFineBoundary.h',
 'CoarsenOperator.h',
 'ComponentSelector.h',
 'Connector.h',
 'ConnectorStatistics.h',
 'FlattenedHierarchy.h',
 'GlobalId.h',
 'HierarchyNeighbors.h',
 'Index.h',
 'IntVector.h',
 'LocalId.h',
 'MappingConnector.h',
 'MappingConnectorAlgorithm.h',
 'MultiblockBoxTree.h',
 'OverlapConnectorAlgorithm.h',
 'Patch.h',
 'PatchBoundaries.h',
 'PatchData.h',
 'PatchDataFactory.h',
 'PatchDataRestartManager.h',
 'PatchDescriptor.h',
 'PatchFactory.h',
 'PatchGeometry.h',
 'PatchHierarchy.h',
 'PatchLevel.h',
 'PatchLevelFactory.h',
 'PeriodicId.h',
 'PeriodicShiftCatalog.h',
 'PersistentOverlapConnectors.h',
 'ProcessorMapping.h',
 'RealBoxConstIterator.h',
 'RefineOperator.h',
 'SequentialLocalIdGenerator.h',
 'SingularityFinder.h',
 'TimeInterpolateOperator.h',
 'TransferOperatorRegistry.h',
 'Transformation.h',
 'UncoveredBoxIterator.h',
 'Variable.h',
 'VariableContext.h',
 'VariableDatabase.h']



hier = library('SAMRAI_hier', sources:hier_sources,
	include_directories:SAMRAI_inc,
	dependencies:[SAMRAI_tbox_dep, SAMRAI_glob_dep]
	)

SAMRAI_hier_dep = declare_dependency(link_with:hier, dependencies:[SAMRAI_tbox_dep, SAMRAI_glob_dep])