math_sources = ['PatchSideDataOpsInteger.C',
	'PatchFaceDataOpsInteger.C',
	'PatchEdgeDataOpsInteger.C',
	'PatchCellDataOpsInteger.C',
	'PatchNodeDataOpsInteger.C',
	'PatchSideDataOpsComplex.C',
	'PatchNodeDataNormOpsComplex.C',
	'PatchSideDataNormOpsComplex.C',
	'PatchFaceDataOpsComplex.C',
	'PatchFaceDataNormOpsComplex.C',
	'PatchNodeDataOpsComplex.C',
	'PatchEdgeDataOpsComplex.C',
	'PatchEdgeDataNormOpsComplex.C',
	'PatchCellDataOpsComplex.C',
	'PatchCellDataNormOpsComplex.C',
	'HierarchyCellDataOpsInteger.C',
	'HierarchyEdgeDataOpsInteger.C',
	'HierarchyFaceDataOpsInteger.C',
	'HierarchySideDataOpsInteger.C',
	'HierarchyNodeDataOpsInteger.C',
	'HierarchyDataOpsManager.C',
	'HierarchyDataOpsInteger.C',
	'HierarchyCellDataOpsComplex.C',
	'HierarchyEdgeDataOpsComplex.C',
	'HierarchyFaceDataOpsComplex.C',
	'HierarchySideDataOpsComplex.C',
	'HierarchyNodeDataOpsComplex.C',
	'HierarchyDataOpsComplex.C',
	'ArrayDataNormOpsComplex.C',
	'ArrayDataNormOpsInteger.C']


math_headers = ['ArrayDataBasicOps.h',
 'ArrayDataMiscellaneousOpsReal.h',
 'ArrayDataNormOpsComplex.h',
 'ArrayDataNormOpsInteger.h',
 'ArrayDataNormOpsReal.h',
 'HierarchyCellDataOpsComplex.h',
 'HierarchyCellDataOpsInteger.h',
 'HierarchyCellDataOpsReal.h',
 'HierarchyDataOpsComplex.h',
 'HierarchyDataOpsInteger.h',
 'HierarchyDataOpsManager.h',
 'HierarchyDataOpsReal.h',
 'HierarchyEdgeDataOpsComplex.h',
 'HierarchyEdgeDataOpsInteger.h',
 'HierarchyEdgeDataOpsReal.h',
 'HierarchyFaceDataOpsComplex.h',
 'HierarchyFaceDataOpsInteger.h',
 'HierarchyFaceDataOpsReal.h',
 'HierarchyNodeDataOpsComplex.h',
 'HierarchyNodeDataOpsInteger.h',
 'HierarchyNodeDataOpsReal.h',
 'HierarchySideDataOpsComplex.h',
 'HierarchySideDataOpsInteger.h',
 'HierarchySideDataOpsReal.h',
 'PatchCellDataBasicOps.h',
 'PatchCellDataMiscellaneousOpsReal.h',
 'PatchCellDataNormOpsComplex.h',
 'PatchCellDataNormOpsReal.h',
 'PatchCellDataOpsComplex.h',
 'PatchCellDataOpsInteger.h',
 'PatchCellDataOpsReal.h',
 'PatchEdgeDataBasicOps.h',
 'PatchEdgeDataMiscellaneousOpsReal.h',
 'PatchEdgeDataNormOpsComplex.h',
 'PatchEdgeDataNormOpsReal.h',
 'PatchEdgeDataOpsComplex.h',
 'PatchEdgeDataOpsInteger.h',
 'PatchEdgeDataOpsReal.h',
 'PatchFaceDataBasicOps.h',
 'PatchFaceDataMiscellaneousOpsReal.h',
 'PatchFaceDataNormOpsComplex.h',
 'PatchFaceDataNormOpsReal.h',
 'PatchFaceDataOpsComplex.h',
 'PatchFaceDataOpsInteger.h',
 'PatchFaceDataOpsReal.h',
 'PatchNodeDataBasicOps.h',
 'PatchNodeDataMiscellaneousOpsReal.h',
 'PatchNodeDataNormOpsComplex.h',
 'PatchNodeDataNormOpsReal.h',
 'PatchNodeDataOpsComplex.h',
 'PatchNodeDataOpsInteger.h',
 'PatchNodeDataOpsReal.h',
 'PatchSideDataBasicOps.h',
 'PatchSideDataMiscellaneousOpsReal.h',
 'PatchSideDataNormOpsComplex.h',
 'PatchSideDataNormOpsReal.h',
 'PatchSideDataOpsComplex.h',
 'PatchSideDataOpsInteger.h',
 'PatchSideDataOpsReal.h']


math = library('SAMRAI_math', sources:math_sources,
	include_directories:SAMRAI_inc,
	dependencies:[SAMRAI_hier_dep, SAMRAI_pdat_dep, SAMRAI_glob_dep]
	)

SAMRAI_math_dep = declare_dependency(link_with:math,
	dependencies:[SAMRAI_hier_dep, SAMRAI_pdat_dep, SAMRAI_glob_dep])