pdat_sources = ['CellComplexLinearTimeInterpolateOp.C',
	'CellDoubleLinearTimeInterpolateOp.C',
	'CellFloatLinearTimeInterpolateOp.C',
	'EdgeComplexLinearTimeInterpolateOp.C',
	'EdgeDoubleLinearTimeInterpolateOp.C',
	'EdgeFloatLinearTimeInterpolateOp.C',
	'FaceComplexLinearTimeInterpolateOp.C',
	'FaceDoubleLinearTimeInterpolateOp.C',
	'FaceFloatLinearTimeInterpolateOp.C',
	'NodeComplexLinearTimeInterpolateOp.C',
	'NodeDoubleLinearTimeInterpolateOp.C',
	'NodeFloatLinearTimeInterpolateOp.C',
	'OuterfaceComplexLinearTimeInterpolateOp.C',
	'OuterfaceDoubleLinearTimeInterpolateOp.C',
	'OuterfaceFloatLinearTimeInterpolateOp.C',
	'OutersideComplexLinearTimeInterpolateOp.C',
	'OutersideDoubleLinearTimeInterpolateOp.C',
	'OutersideFloatLinearTimeInterpolateOp.C',
	'SideComplexLinearTimeInterpolateOp.C',
	'SideDoubleLinearTimeInterpolateOp.C',
	'SideFloatLinearTimeInterpolateOp.C',
	'CellComplexConstantRefine.C',
	'CellDoubleConstantRefine.C',
	'CellFloatConstantRefine.C',
	'CellIntegerConstantRefine.C',
	'EdgeComplexConstantRefine.C',
	'EdgeDoubleConstantRefine.C',
	'EdgeFloatConstantRefine.C',
	'EdgeIntegerConstantRefine.C',
	'FaceComplexConstantRefine.C',
	'FaceDoubleConstantRefine.C',
	'FaceFloatConstantRefine.C',
	'FaceIntegerConstantRefine.C',
	'OuterfaceComplexConstantRefine.C',
	'OuterfaceDoubleConstantRefine.C',
	'OuterfaceFloatConstantRefine.C',
	'OuterfaceIntegerConstantRefine.C',
	'SideComplexConstantRefine.C',
	'SideDoubleConstantRefine.C',
	'SideFloatConstantRefine.C',
	'SideIntegerConstantRefine.C',
	'NodeComplexInjection.C',
	'NodeDoubleInjection.C',
	'NodeFloatInjection.C',
	'NodeIntegerInjection.C',
	'OuternodeDoubleInjection.C',
	'CellIterator.C',
	'EdgeIterator.C',
	'FaceIterator.C',
	'NodeIterator.C',
	'SideIterator.C',
	'CellIndex.C',
	'EdgeIndex.C',
	'FaceIndex.C',
	'NodeIndex.C',
	'SideIndex.C',
	'CellGeometry.C',
	'EdgeGeometry.C',
	'FaceGeometry.C',
	'NodeGeometry.C',
	'OuteredgeGeometry.C',
	'OuterfaceGeometry.C',
	'OuternodeGeometry.C',
	'OutersideGeometry.C',
	'SideGeometry.C',
	'CellOverlap.C',
	'EdgeOverlap.C',
	'FaceOverlap.C',
	'NodeOverlap.C',
	'SideOverlap.C',
	'ArrayDataIterator.C',
	'FirstLayerCellVariableFillPattern.C',
	'FirstLayerCellNoCornersVariableFillPattern.C',
	'FirstLayerEdgeVariableFillPattern.C',
	'FirstLayerNodeVariableFillPattern.C',
	'FirstLayerSideVariableFillPattern.C',
	'SecondLayerNodeVariableFillPattern.C',
	'SecondLayerNodeNoCornersVariableFillPattern.C',
	'SparseData.C',
	'SparseDataFactory.C',
	'SparseDataVariable.C',
	'IntegerAttributeId.C',
	'DoubleAttributeId.C']


pdat_headers = ['ArrayData.h',
 'ArrayDataAccess.h',
 'ArrayDataIterator.h',
 'ArrayDataOperationUtilities.h',
 'CellComplexConstantRefine.h',
 'CellComplexLinearTimeInterpolateOp.h',
 'CellData.h',
 'CellDataFactory.h',
 'CellDoubleConstantRefine.h',
 'CellDoubleLinearTimeInterpolateOp.h',
 'CellFloatConstantRefine.h',
 'CellFloatLinearTimeInterpolateOp.h',
 'CellGeometry.h',
 'CellIndex.h',
 'CellIntegerConstantRefine.h',
 'CellIterator.h',
 'CellOverlap.h',
 'CellVariable.h',
 'CopyOperation.h',
 'DoubleAttributeId.h',
 'EdgeComplexConstantRefine.h',
 'EdgeComplexLinearTimeInterpolateOp.h',
 'EdgeData.h',
 'EdgeDataFactory.h',
 'EdgeDoubleConstantRefine.h',
 'EdgeDoubleLinearTimeInterpolateOp.h',
 'EdgeFloatConstantRefine.h',
 'EdgeFloatLinearTimeInterpolateOp.h',
 'EdgeGeometry.h',
 'EdgeIndex.h',
 'EdgeIntegerConstantRefine.h',
 'EdgeIterator.h',
 'EdgeOverlap.h',
 'EdgeVariable.h',
 'FaceComplexConstantRefine.h',
 'FaceComplexLinearTimeInterpolateOp.h',
 'FaceData.h',
 'FaceDataFactory.h',
 'FaceDoubleConstantRefine.h',
 'FaceDoubleLinearTimeInterpolateOp.h',
 'FaceFloatConstantRefine.h',
 'FaceFloatLinearTimeInterpolateOp.h',
 'FaceGeometry.h',
 'FaceIndex.h',
 'FaceIntegerConstantRefine.h',
 'FaceIterator.h',
 'FaceOverlap.h',
 'FaceVariable.h',
 'FirstLayerCellNoCornersVariableFillPattern.h',
 'FirstLayerCellVariableFillPattern.h',
 'FirstLayerEdgeVariableFillPattern.h',
 'FirstLayerNodeVariableFillPattern.h',
 'FirstLayerSideVariableFillPattern.h',
 'IndexData.h',
 'IndexDataFactory.h',
 'IndexVariable.h',
 'IntegerAttributeId.h',
 'MDA_Access.h',
 'NodeComplexInjection.h',
 'NodeComplexLinearTimeInterpolateOp.h',
 'NodeData.h',
 'NodeDataFactory.h',
 'NodeDoubleInjection.h',
 'NodeDoubleLinearTimeInterpolateOp.h',
 'NodeFloatInjection.h',
 'NodeFloatLinearTimeInterpolateOp.h',
 'NodeGeometry.h',
 'NodeIndex.h',
 'NodeIntegerInjection.h',
 'NodeIterator.h',
 'NodeOverlap.h',
 'NodeVariable.h',
 'OuteredgeData.h',
 'OuteredgeDataFactory.h',
 'OuteredgeGeometry.h',
 'OuteredgeVariable.h',
 'OuterfaceComplexConstantRefine.h',
 'OuterfaceComplexLinearTimeInterpolateOp.h',
 'OuterfaceData.h',
 'OuterfaceDataFactory.h',
 'OuterfaceDoubleConstantRefine.h',
 'OuterfaceDoubleLinearTimeInterpolateOp.h',
 'OuterfaceFloatConstantRefine.h',
 'OuterfaceFloatLinearTimeInterpolateOp.h',
 'OuterfaceGeometry.h',
 'OuterfaceIntegerConstantRefine.h',
 'OuterfaceVariable.h',
 'OuternodeData.h',
 'OuternodeDataFactory.h',
 'OuternodeDoubleInjection.h',
 'OuternodeGeometry.h',
 'OuternodeVariable.h',
 'OutersideComplexLinearTimeInterpolateOp.h',
 'OutersideData.h',
 'OutersideDataFactory.h',
 'OutersideDoubleLinearTimeInterpolateOp.h',
 'OutersideFloatLinearTimeInterpolateOp.h',
 'OutersideGeometry.h',
 'OutersideVariable.h',
 'SecondLayerNodeNoCornersVariableFillPattern.h',
 'SecondLayerNodeVariableFillPattern.h',
 'SideComplexConstantRefine.h',
 'SideComplexLinearTimeInterpolateOp.h',
 'SideData.h',
 'SideDataFactory.h',
 'SideDoubleConstantRefine.h',
 'SideDoubleLinearTimeInterpolateOp.h',
 'SideFloatConstantRefine.h',
 'SideFloatLinearTimeInterpolateOp.h',
 'SideGeometry.h',
 'SideIndex.h',
 'SideIntegerConstantRefine.h',
 'SideIterator.h',
 'SideOverlap.h',
 'SideVariable.h',
 'SparseData.h',
 'SparseDataFactory.h',
 'SparseDataVariable.h',
 'SumOperation.h']



pdat_fortran_sources = m4_generator.process(
['fortran/pdat_concoarsen1d.m4',
 'fortran/pdat_concoarsen2d.m4',
 'fortran/pdat_concoarsen3d.m4',
 'fortran/pdat_conrefine1d.m4',
 'fortran/pdat_conrefine2d.m4',
 'fortran/pdat_conrefine3d.m4',
 'fortran/pdat_dbugfort1d.m4',
 'fortran/pdat_dbugfort2d.m4',
 'fortran/pdat_dbugfort3d.m4',
 'fortran/pdat_lintimint1d.m4',
 'fortran/pdat_lintimint2d.m4',
 'fortran/pdat_lintimint3d.m4']

)

pdat = library('SAMRAI_pdat', sources:[pdat_fortran_sources, pdat_sources],
	include_directories:SAMRAI_inc,
	dependencies: [SAMRAI_xfer_dep, SAMRAI_tbox_dep, SAMRAI_hier_dep, SAMRAI_glob_dep],
	link_args:['-lgfortran']
	)

SAMRAI_pdat_dep = declare_dependency(link_with:pdat,
	dependencies: [SAMRAI_xfer_dep, SAMRAI_tbox_dep, SAMRAI_hier_dep, SAMRAI_glob_dep])