tbox_sources = ['ArraySpecial.C',
	'AsyncCommGroup.C',
	'AsyncCommStage.C',
	'BalancedDepthFirstTree.C',
	'BreadthFirstRankTree.C',
	'CenteredRankTree.C',
	'Clock.C',
	'CommGraphWriter.C',
	'Database.C',
	'DatabaseBox.C',
	'DatabaseFactory.C',
	'Dimension.C',
	'Grammar.C',
	'HDFDatabase.C',
	'HDFDatabaseFactory.C',
	'IEEE.C',
	'InputManager.C',
	'Logger.C',
	'MathUtilitiesSpecial.C',
	'MemoryDatabase.C',
	'MemoryDatabaseFactory.C',
	'MemoryUtilities.C',
	'MessageStream.C',
	'NullDatabase.C',
	'PIO.C',
	'ParallelBuffer.C',
	'Parser.C',
	'RankGroup.C',
	'RankTreeStrategy.C',
	'ReferenceCounter.C',
	'RestartManager.C',
	'SAMRAIManager.C',
	'SAMRAI_MPI.C',
	'Scanner.C',
	'Schedule.C',
	'Serializable.C',
	'SiloDatabase.C',
	'SiloDatabaseFactory.C',
	'StartupShutdownManager.C',
	'StatTransaction.C',
	'Statistic.C',
	'Statistician.C',
	'Timer.C',
	'TimerManager.C',
	'Tracer.C',
	'Transaction.C',
	'Utilities.C']


tbox_headers = ['Array.h',
 'AsyncCommGroup.h',
 'AsyncCommPeer.h',
 'AsyncCommStage.h',
 'BalancedDepthFirstTree.h',
 'Boost.h',
 'BreadthFirstRankTree.h',
 'CenteredRankTree.h',
 'Clock.h',
 'CommGraphWriter.h',
 'Complex.h',
 'Database.h',
 'DatabaseBox.h',
 'DatabaseFactory.h',
 'Dimension.h',
 'Grammar.h',
 'HDFDatabase.h',
 'HDFDatabaseFactory.h',
 'IEEE.h',
 'IOStream.h',
 'InputDatabase.h',
 'InputManager.h',
 'Logger.h',
 'MathUtilities.h',
 'MemoryDatabase.h',
 'MemoryDatabaseFactory.h',
 'MemoryUtilities.h',
 'MessageStream.h',
 'NullDatabase.h',
 'OpenMPUtilities.h',
 'PIO.h',
 'ParallelBuffer.h',
 'Parser.h',
 'RankGroup.h',
 'RankTreeStrategy.h',
 'ReferenceCounter.h',
 'RestartManager.h',
 'SAMRAIManager.h',
 'SAMRAI_MPI.h',
 'Schedule.h',
 'Serializable.h',
 'SiloDatabase.h',
 'SiloDatabaseFactory.h',
 'StartupShutdownManager.h',
 'StatTransaction.h',
 'Statistic.h',
 'Statistician.h',
 'Timer.h',
 'TimerManager.h',
 'Tracer.h',
 'Transaction.h',
 'Utilities.h']


tbox = library('SAMRAI_tbox', sources:tbox_sources,
	include_directories:SAMRAI_inc,
	dependencies:SAMRAI_glob_dep
	)

SAMRAI_tbox_dep = declare_dependency(include_directories:SAMRAI_inc, link_with:tbox, dependencies:SAMRAI_glob_dep)
