tbox_sources_C = ['InputManager.C',
 'HDFDatabase.C',
 'Grammar.C',
 'SAMRAI_MPI.C',
 'Scanner.C',
 'Dimension.C',
 'Logger.C',
 'ParallelBuffer.C',
 'NullDatabase.C',
 'HDFDatabaseFactory.C',
 'Timer.C',
 'Statistic.C',
 'IEEE.C',
 'Transaction.C',
 'MemoryDatabaseFactory.C',
 'ConduitDatabase.C',
 'PIO.C',
 #'MathUtilities.C',
 'MessageStream.C',
 'RankGroup.C',
 'Database.C',
 'MemoryDatabase.C',
 'Schedule.C',
 'MathUtilitiesSpecial.C',
 'ReferenceCounter.C',
 'Statistician.C',
 'StatTransaction.C',
 'AsyncCommStage.C',
 'RestartManager.C',
 'Utilities.C',
 'Clock.C',
 'CommGraphWriter.C',
 'AsyncCommPeer.C',
 'DatabaseFactory.C',
 'TimerManager.C',
 'CenteredRankTree.C',
 'SAMRAIManager.C',
 'Serializable.C',
 'BreadthFirstRankTree.C',
 'BalancedDepthFirstTree.C',
 'SiloDatabase.C',
 'Tracer.C',
 'SiloDatabaseFactory.C',
 'AllocatorDatabase.C',
 'DatabaseBox.C',
 'Array.C',
 'ArraySpecial.C',
 'RankTreeStrategy.C',
 'MemoryUtilities.C',
 'AsyncCommGroup.C',
 'StartupShutdownManager.C',
 'Parser.C']



tbox_headers = ['Array.h',
 'AsyncCommGroup.h',
 'AsyncCommPeer.h',
 'AsyncCommStage.h',
 'BalancedDepthFirstTree.h',
 'Boost.h',
 'BreadthFirstRankTree.h',
 'CenteredRankTree.h',
 'Clock.h',
 'CommGraphWriter.h',
 'Complex.h',
 'Database.h',
 'DatabaseBox.h',
 'DatabaseFactory.h',
 'Dimension.h',
 'Grammar.h',
 'HDFDatabase.h',
 'HDFDatabaseFactory.h',
 'IEEE.h',
 'IOStream.h',
 'InputDatabase.h',
 'InputManager.h',
 'Logger.h',
 'MathUtilities.h',
 'MemoryDatabase.h',
 'MemoryDatabaseFactory.h',
 'MemoryUtilities.h',
 'MessageStream.h',
 'NullDatabase.h',
 'OpenMPUtilities.h',
 'PIO.h',
 'ParallelBuffer.h',
 'Parser.h',
 'RankGroup.h',
 'RankTreeStrategy.h',
 'ReferenceCounter.h',
 'RestartManager.h',
 'SAMRAIManager.h',
 'SAMRAI_MPI.h',
 'Schedule.h',
 'Serializable.h',
 'SiloDatabase.h',
 'SiloDatabaseFactory.h',
 'StartupShutdownManager.h',
 'StatTransaction.h',
 'Statistic.h',
 'Statistician.h',
 'Timer.h',
 'TimerManager.h',
 'Tracer.h',
 'Transaction.h',
 'Utilities.h']

tbox_sources = C_to_cpp_gen.process(tbox_sources_C)

tbox = library('SAMRAI_tbox', sources:tbox_sources,
	include_directories:SAMRAI_inc,
	dependencies:SAMRAI_glob_dep
	)


SAMRAI_tbox_dep = declare_dependency(include_directories:SAMRAI_inc, link_with:tbox, dependencies:SAMRAI_glob_dep)
